# Heron

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  rtd_requirements.txt  setup.py  typescript
Heron/: constants.py  decorators.py  general_utils.py  pyproject.toml  settings.json  settings_default.json
Heron/Operations/Sinks/Motion/: near_zero_controller_com.py  near_zero_controller_worker.py
Heron/Operations/Sinks/Vision/: save_ffmpeg_video_com.py  save_ffmpeg_video_worker.py  save_video_com.py  save_video_worker.py
Heron/Operations/Sources/Input/: key_com.py  key_worker.py
Heron/Operations/Sources/Vision/: camera_com.py  camera_worker.py  spinnaker_camera_com.py  spinnaker_camera_worker.py
Heron/Operations/Transforms/General/: nothing_com.py  nothing_worker.py
Heron/Operations/Transforms/Vision/: canny_com.py  canny_worker.py  cvtColor_com.py  cvtColor_worker.py  differencing_com.py  differencing_worker.py  resize_com.py  resize_worker.py
Heron/communication/: forwarder_for_data.py  forwarder_for_state.py  forwarders.py  gui_com.py  sink_com.py  sink_worker.py  socket_for_serialization.py  source_com.py  source_worker.py  ssh_com.py  ssh_info.json  transform_com.py  transform_worker.py
Heron/docs/: .buildinfo  conf.py  index.rst  requirements.txt  test.rst
Heron/docs/rtd/: about  autoapi  conf.py  documentation  index.rst
Heron/docs/source/: conf.py  index.rst
Heron/docs/source/about/: about_heron.rst
Heron/docs/source/documentation/: adding_repos.rst  debugging.rst  installation.rst  lan_use.rst  node_types.rst  saving_state.rst  synchronisation.rst  the_editor.rst  the_relic_system.rst  visualisation.rst  writing_new_nodes.rst  writing_new_sources.rst  (+1 more)
Heron/gui/: auto_transforms.py  create_new_node.py  default_style.py  editor.py  fdialog.py  fonts.py  message.py  node.py  operations_list.py  relic.py  save_node_state.py  settings.py  ssh_info_editor.py  visualisation.py  visualisation_dpg.py
Heron/templates/: source_template_com.py  source_template_worker.py  transform_template_com.py  transform_template_worker.py
Heron/templates/Sink_Template/: sink_template_com.py  sink_template_worker.py
Heron/templates/Source_Template/: source_template_com.py  source_template_worker.py
Heron/templates/Transform_Template/: transform_template_com.py  transform_template_worker.py
(+190 files in other folders)
