[tool.poetry]
name = "heron"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
pandas = "^1.4.3"
tornado = "^6.2"
pyzmq = "^23.2.0"
paramiko = "^2.11.0"
dearpygui = "^1.6.2"
opencv-python = "^4.6.0"
h5py = "^3.7.0"
evdev = "^1.6.0"
pynput = "^1.7.6"
serial = "^0.0.97"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
