[tool.poetry]
name = "heron"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pyzmq = "^23.0.0"
numpy = "^1.22.4"
dearpygui = "^1.6.2"
paramiko = "^2.11.0"
scipy = "^1.8.1"
h5py = "^3.7.0"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
